<ui version="4.0" >
 <class>FusionRenderDialogUI</class>
 <widget class="QDialog" name="FusionRenderDialogUI" >
  <property name="geometry" >
   <rect>
    <x>0</x>
    <y>0</y>
    <width>544</width>
    <height>485</height>
   </rect>
  </property>
  <property name="windowTitle" >
   <string>Submit After Effects Render</string>
  </property>
  <property name="sizeGripEnabled" >
   <bool>true</bool>
  </property>
  <layout class="QVBoxLayout" >
   <property name="margin" >
    <number>6</number>
   </property>
   <property name="spacing" >
    <number>6</number>
   </property>
   <item>
    <layout class="QGridLayout" >
     <property name="margin" >
      <number>0</number>
     </property>
     <property name="spacing" >
      <number>3</number>
     </property>
     <item row="1" column="1" >
      <widget class="QLineEdit" name="mJobNameEdit" />
     </item>
     <item row="3" column="0" >
      <widget class="QLabel" name="label_9" >
       <property name="text" >
        <string>Project:</string>
       </property>
      </widget>
     </item>
     <item row="3" column="1" >
      <widget class="ProjectCombo" name="mProjectCombo" />
     </item>
     <item row="2" column="0" >
      <widget class="QLabel" name="label_4" >
       <property name="text" >
        <string>Priority:</string>
       </property>
      </widget>
     </item>
     <item row="0" column="0" >
      <widget class="QLabel" name="label" >
       <property name="text" >
        <string>FileName:</string>
       </property>
      </widget>
     </item>
     <item row="0" column="1" >
      <widget class="QLineEdit" name="mFileNameEdit" >
       <property name="readOnly" >
        <bool>true</bool>
       </property>
      </widget>
     </item>
     <item row="1" column="0" >
      <widget class="QLabel" name="label_2" >
       <property name="text" >
        <string>Job Name:</string>
       </property>
      </widget>
     </item>
     <item row="2" column="1" >
      <widget class="QSpinBox" name="mPrioritySpin" >
       <property name="minimum" >
        <number>1</number>
       </property>
       <property name="value" >
        <number>50</number>
       </property>
      </widget>
     </item>
    </layout>
   </item>
   <item>
    <widget class="QTreeWidget" name="mPassTree" >
     <column>
      <property name="text" >
       <string>Pass Name</string>
      </property>
     </column>
     <column>
      <property name="text" >
       <string>Frame Start</string>
      </property>
     </column>
     <column>
      <property name="text" >
       <string>Frame End</string>
      </property>
     </column>
     <column>
      <property name="text" >
       <string>Output Path</string>
      </property>
     </column>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="groupBox" >
     <property name="title" >
      <string>Options</string>
     </property>
     <property name="flat" >
      <bool>false</bool>
     </property>
     <layout class="QVBoxLayout" >
      <property name="margin" >
       <number>6</number>
      </property>
      <property name="spacing" >
       <number>6</number>
      </property>
      <item>
       <widget class="QCheckBox" name="mDeleteOnCompleteCheck" >
        <property name="text" >
         <string>Delete Job On Completion</string>
        </property>
       </widget>
      </item>
      <item>
       <layout class="QHBoxLayout" >
        <property name="margin" >
         <number>0</number>
        </property>
        <property name="spacing" >
         <number>6</number>
        </property>
        <item>
         <widget class="QLabel" name="label_5" >
          <property name="text" >
           <string>Packet Size:</string>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QSpinBox" name="mPacketSizeSpin" >
          <property name="enabled" >
           <bool>false</bool>
          </property>
          <property name="maximum" >
           <number>1000000</number>
          </property>
          <property name="minimum" >
           <number>1</number>
          </property>
          <property name="value" >
           <number>5</number>
          </property>
         </widget>
        </item>
        <item>
         <widget class="QCheckBox" name="mAutoPacketSizeCheck" >
          <property name="text" >
           <string>Auto</string>
          </property>
          <property name="checked" >
           <bool>true</bool>
          </property>
         </widget>
        </item>
       </layout>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <widget class="QGroupBox" name="groupBox_2" >
     <property name="title" >
      <string>Notifications</string>
     </property>
     <layout class="QGridLayout" >
      <property name="margin" >
       <number>6</number>
      </property>
      <property name="spacing" >
       <number>6</number>
      </property>
      <item row="1" column="0" >
       <widget class="QLabel" name="label_8" >
        <property name="text" >
         <string>Completion:</string>
        </property>
       </widget>
      </item>
      <item row="0" column="0" >
       <widget class="QLabel" name="label_7" >
        <property name="text" >
         <string>Errors:</string>
        </property>
       </widget>
      </item>
      <item row="1" column="1" >
       <widget class="QCheckBox" name="mEmailCompletionCheck" >
        <property name="text" >
         <string>Email</string>
        </property>
       </widget>
      </item>
      <item row="0" column="1" >
       <widget class="QCheckBox" name="mEmailErrorsCheck" >
        <property name="text" >
         <string>Email</string>
        </property>
       </widget>
      </item>
      <item row="1" column="2" >
       <widget class="QCheckBox" name="mJabberCompletionCheck" >
        <property name="text" >
         <string>Jabber</string>
        </property>
       </widget>
      </item>
      <item row="0" column="2" >
       <widget class="QCheckBox" name="mJabberErrorsCheck" >
        <property name="text" >
         <string>Jabber</string>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item>
    <layout class="QHBoxLayout" >
     <property name="margin" >
      <number>0</number>
     </property>
     <property name="spacing" >
      <number>6</number>
     </property>
     <item>
      <spacer>
       <property name="orientation" >
        <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" >
        <size>
         <width>40</width>
         <height>20</height>
        </size>
       </property>
      </spacer>
     </item>
     <item>
      <widget class="QPushButton" name="mOkButton" >
       <property name="text" >
        <string>&amp;Ok</string>
       </property>
       <property name="default" >
        <bool>true</bool>
       </property>
      </widget>
     </item>
     <item>
      <widget class="QPushButton" name="mCancelButton" >
       <property name="text" >
        <string>&amp;Cancel</string>
       </property>
      </widget>
     </item>
    </layout>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>ProjectCombo</class>
   <extends>QComboBox</extends>
   <header>blur/Classesui.h</header>
  </customwidget>
 </customwidgets>
 <tabstops>
  <tabstop>mFileNameEdit</tabstop>
  <tabstop>mJobNameEdit</tabstop>
  <tabstop>mPrioritySpin</tabstop>
  <tabstop>mPacketSizeSpin</tabstop>
  <tabstop>mAutoPacketSizeCheck</tabstop>
  <tabstop>mEmailErrorsCheck</tabstop>
  <tabstop>mJabberErrorsCheck</tabstop>
  <tabstop>mEmailCompletionCheck</tabstop>
  <tabstop>mJabberCompletionCheck</tabstop>
  <tabstop>mOkButton</tabstop>
  <tabstop>mCancelButton</tabstop>
 </tabstops>
 <resources/>
 <connections>
  <connection>
   <sender>mOkButton</sender>
   <signal>clicked()</signal>
   <receiver>FusionRenderDialogUI</receiver>
   <slot>accept()</slot>
   <hints>
    <hint type="sourcelabel" >
     <x>192</x>
     <y>373</y>
    </hint>
    <hint type="destinationlabel" >
     <x>157</x>
     <y>390</y>
    </hint>
   </hints>
  </connection>
  <connection>
   <sender>mCancelButton</sender>
   <signal>clicked()</signal>
   <receiver>FusionRenderDialogUI</receiver>
   <slot>reject()</slot>
   <hints>
    <hint type="sourcelabel" >
     <x>310</x>
     <y>378</y>
    </hint>
    <hint type="destinationlabel" >
     <x>312</x>
     <y>392</y>
    </hint>
   </hints>
  </connection>
 </connections>
</ui>
